# logitech-g915x-driver

./: Cargo.toml  Makefile  install.sh  mapping.conf  uninstall.sh
src/: main.rs
src/identify_led_codes/: mod.rs
src/keyboard/: keyboard.rs
