[package]
name = "logitech-g915x-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
# Async stream for keyboard events (Requires 'tokio' feature)
evdev = { version = "0.12", features = ["tokio"] }
# HID communication for RGB
hidapi = "2.6"
# For stream utilities like .next()
futures-util = "0.3"
hex = "0.4.3"